fixed clouds, that a broken on gh-pages only

--- a/_sass/layouts/_course.scss
+++ b/_sass/layouts/_course.scss
@@ -27,23 +27,24 @@
     background-image: url(/img/course/rocks.svg);
   }
   .parallax-bg-clouds{
-    animation: clouds 10s linear infinite;
-    background-attachment: initial;
-    background-image: url(/img/course/clouds.svg);
-    background-position-y: 0;
-    background-repeat: repeat-x;
-    background-size: 1440px auto;
-    position: fixed;
-    top: -20%;
+    /*animation: clouds 10s linear infinite;*/
+    /*background-attachment: initial;*/
+    /*background-image: url(/img/course/clouds.svg);*/
+    background-color: #fff;
+    /*background-position-y: 0;*/
+    /*background-repeat: repeat-x;*/
+    /*background-size: 1440px auto;*/
+    /*position: fixed;*/
+    /*top: -20%;*/
   }
-  @keyframes clouds {
-    from { 
-      background-position-x: 0px; 
-    }
-    to {
-      background-position-x: 1440px;
-    }
-  }
+  /*@keyframes clouds {*/
+    /*from { */
+      /*background-position-x: 0px; */
+    /*}*/
+    /*to {*/
+      /*background-position-x: 1440px;*/
+    /*}*/
+  /*}*/
   article{
     text-align: center;
     .payment{
